--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		border: 0;
 		font-size: 1.1em;
 		font-weight: bold;
-		margin-left: 4px;
+		margin-left: 3px;
 	}
 
 	</style>
@@ -69,7 +69,7 @@
 <table id="maintable"><tr>
 <td width="160">
 	<ul id="sortable1" class="connectedSortable">
-	Cards
+		<li class="category_name"><input type="text" value="Cards" /></li>
 		<li class="ui-state-default">Item 1</li>
 		<li class="ui-state-default">Item 2</li>
 		<li class="ui-state-default">Item 3</li>
